--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>My First Dashboard</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+{#    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>#}
+{#    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>#}
+    <script src="{{ url_for('static', filename='js/plotly-latest.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/d3.min.js') }}"></script>
 </head>
 <body>
 <div class="container">
